--- a/frontend/style.css
+++ b/frontend/style.css
@@ -513,7 +513,7 @@ html, body {
   border-bottom: 1px solid var(--border-soft);
   vertical-align: top;
   line-height: 1.3;
-  white-space: nowrap;
+  /* white-space: nowrap; */
   color: var(--text-main);
 }
 
