--- a/backend/templates/partials/game_table.html
+++ b/backend/templates/partials/game_table.html
@@ -6,8 +6,9 @@
         <th>Nom</th>
         <th>Joueurs</th>
         <th>Durée</th>
+        <th>Type</th>
         <th>Équipe</th>
-        <th>Supports</th>
+        <th>Tags</th>
         {% if show_actions %}<th></th>{% endif %}
       </tr>
     </thead>
